...


    </LinearLayout>


    <com.exponential_groth.mathview.MathView
        android:id="@+id/MVResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:visibility="visible"
        app:engine="KaTeX"
        android:layout_marginBottom="7dp"
...
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:background="@color/blueButtonBackground"
        app:layout_constraintStart_toEndOf="@id/buttonBlueLeft"
        app:layout_constraintTop_toBottomOf="@id/buttonBlueLeft"
        app:layout_constraintBottom_toBottomOf="@id/navigationField"
        app:layout_constraintEnd_toStartOf="@id/buttonBlueRight"
        />

    <Button
        android:id="@+id/buttonBlueRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
        android:id="@+id/button38"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/eng"
        style="@style/Widget.Calculator.Button.Top"
        app:layout_constraintEnd_toEndOf="@id/button2"
        app:layout_constraintBottom_toTopOf="@id/button32"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/TVCalculation"/>

    <Button
        android:id="@+id/button31"
...
        app:layout_constraintBottom_toTopOf="@id/container27"
        app:layout_constraintEnd_toEndOf="@id/button16"
        app:layout_constraintStart_toStartOf="@id/button16"
        app:layout_constraintTop_toTopOf="@id/button32">

        <Button
            android:id="@+id/button24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.Calculator.Button.Top"
            android:contentDescription="@string/logAOfBaseB" />

        <ImageView
...
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/sin"
        android:textAllCaps="false"
        style="@style/Widget.Calculator.Button.Top"
        app:layout_constraintEnd_toEndOf="@id/container10"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/container10"
        app:layout_constraintTop_toBottomOf="@id/button21"/>


    <ImageView
        android:id="@+id/imageView35"
...
        android:text="@string/five"
        android:textSize="20sp"
        style="@style/Widget.Calculator.Button.Bottom"
        app:layout_constraintEnd_toEndOf="@+id/button16"
        app:layout_constraintStart_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        app:layout_constraintBottom_toTopOf="@id/button14"/>

    <TextView
        android:id="@+id/tVF"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/f"
...
        android:text="@string/six"
        android:textSize="20sp"
        style="@style/Widget.Calculator.Button.Bottom"
        app:layout_constraintEnd_toEndOf="@+id/button13"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@id/button19"
        app:layout_constraintBottom_toTopOf="@id/button11"/>


    <TextView
        android:id="@+id/tV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
